# LostInAMaze

./: CMakeLists.txt  main.cpp
Dependencies/SeNes2D/: CMakeLists.txt
Dependencies/SeNes2D/Lib/core/Objects/Shapes/includes/: Cube.h  Rectangle.h
Dependencies/SeNes2D/Lib/core/Objects/Shapes/sources/: Cube.cpp  Rectangle.cpp
Dependencies/SeNes2D/Lib/core/Objects/includes/: Camera.h  SceneObject.h
Dependencies/SeNes2D/Lib/core/Objects/sources/: Camera.cpp  SceneObject.cpp
Dependencies/SeNes2D/Lib/core/Wrappers/include/: Shader.h  Window.h
Dependencies/SeNes2D/Lib/core/Wrappers/source/: Shader.cpp  VAO.cpp  Window.cpp
Game/: CMakeLists.txt  Game.cpp
Game/WorldObjects/: CMakeLists.txt
Game/WorldObjects/includes/: Player.h  Wall.h
Game/WorldObjects/sources/: Player.cpp  Wall.cpp
Game/includes/: Game.h
Game/sources/: Game.cpp
assets/: main.frag
